force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/TeachingSupplyReceiveAndReutrnContact__mdt.object-meta.xml
<CustomObject>
    <description>存储各教学地点的教学物品领取和归还的联系人信息。</description>
    <label>教学用品领取归还联系信息</label>
</CustomObject>