force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>地点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MingdeBuilding</fullName>
                <label>明德楼</label>
            </value>
            <value>
                <fullName>BoyaBuilding</fullName>
                <label>伯牙楼</label>
            </value>
            <value>
                <fullName>HongwenBuilding</fullName>
                <label>弘文楼</label>
            </value>
            <value>
                <fullName>DaqianBuilding</fullName>
                <label>大千楼</label>
            </value>
            <value>
                <fullName>GezhiBuilding</fullName>
                <label>格致楼</label>
            </value>
            <value>
                <fullName>TrainingCenter</fullName>
                <label>培训中心</label>
            </value>
            <value>
                <fullName>X1stPracticalTrainingBuilding</fullName>
                <label>第一实训楼</label>
            </value>
            <value>
                <fullName>X2ndPracticalTrainingBuilding</fullName>
                <label>第二实训楼</label>
            </value>
            <value>
                <fullName>X3rdPracticalTrainingBuilding</fullName>
                <label>第三实训楼</label>
            </value>
            <value>
                <fullName>X1stPlayground</fullName>
                <label>第一运动场</label>
            </value>
            <value>
                <fullName>X2ndPlayground</fullName>
                <label>第二运动场</label>
            </value>
            <value>
                <fullName>X3rdPlayground</fullName>
                <label>第三运动场</label>
            </value>
            <value>
                <fullName>X4thPlayground</fullName>
                <label>第四运动场</label>
            </value>
            <value>
                <fullName>X5thPlayground</fullName>
                <label>第五运动场</label>
            </value>
            <value>
                <fullName>GroundTrackField</fullName>
                <label>田径场</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>