force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/ReceiveAddress__c.field-meta.xml
<CustomField>
    <fullName>ReceiveAddress__c</fullName>
    <label>领取地址</label>
    <length>100</length>
    <type>Text</type>
</CustomField>