force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/ReceiveContact__c.field-meta.xml
<CustomField>
    <fullName>ReceiveContact__c</fullName>
    <label>领取联系人</label>
    <length>40</length>
    <type>Text</type>
</CustomField>