force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/ReceiveContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ReceiveContactPhone__c</fullName>
    <label>领取联系方式</label>
    <type>Phone</type>
</CustomField>