force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/ReturnAddress__c.field-meta.xml
<CustomField>
    <fullName>ReturnAddress__c</fullName>
    <label>归还地址</label>
    <length>100</length>
    <type>Text</type>
</CustomField>