force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/ReturnContact__c.field-meta.xml
<CustomField>
    <fullName>ReturnContact__c</fullName>
    <label>归还联系人</label>
    <length>40</length>
    <type>Text</type>
</CustomField>