force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/ReturnContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ReturnContactPhone__c</fullName>
    <label>归还联系方式</label>
    <type>Phone</type>
</CustomField>