force-app/main/default/objects/TeachingSupplyReceiveAndReutrnContact__mdt/fields/SecondaryCollege__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCollege__c</fullName>
    <inlineHelpText>若该条记录的教学地点中的教学用品不归属具体的二级学院管理，请保留此字段为空值。</inlineHelpText>
    <label>学院</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>人工智能学院</fullName>
            </value>
            <value>
                <fullName>体育学院</fullName>
            </value>
            <value>
                <fullName>化学化工学院</fullName>
            </value>
            <value>
                <fullName>地理与资源科学学院</fullName>
            </value>
            <value>
                <fullName>外国语学院</fullName>
            </value>
            <value>
                <fullName>建筑工程学院</fullName>
            </value>
            <value>
                <fullName>张大千美术学院</fullName>
            </value>
            <value>
                <fullName>政治与公共管理学院</fullName>
            </value>
            <value>
                <fullName>教育科学学院</fullName>
            </value>
            <value>
                <fullName>数学与信息科学学院</fullName>
            </value>
            <value>
                <fullName>文学院</fullName>
            </value>
            <value>
                <fullName>物理与电子信息工程学院</fullName>
            </value>
            <value>
                <fullName>生命科学学院</fullName>
            </value>
            <value>
                <fullName>经济与管理学院</fullName>
            </value>
            <value>
                <fullName>范长江新闻学院</fullName>
            </value>
            <value>
                <fullName>音乐学院</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>